WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
263991
[ iOS EWS ] 2X TestWebKitAPI.ServiceWorker.WindowClientNavigate (API-Tests) are flaky timeout
https://bugs.webkit.org/show_bug.cgi?id=263991
Summary
[ iOS EWS ] 2X TestWebKitAPI.ServiceWorker.WindowClientNavigate (API-Tests) a...
Robert Jenner
Reported
2023-10-31 13:11:26 PDT
TestWebKitAPI.ServiceWorker.WindowClientNavigateCrossOrigin TestWebKitAPI.ServiceWorker.WindowClientNavigate are both flaky timeouts on iOS EWS only. Test run to observed timeout on EWS:
https://ews-build.webkit.org/#/builders/13/builds/22081
And you can see if you look back in
https://ews-build.webkit.org/#/builders/13
that they have been flaky but only on iOS EWS for a bit.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-10-31 13:11:57 PDT
<
rdar://problem/117758550
>
Robert Jenner
Comment 2
2023-10-31 15:44:02 PDT
I ran each of these tests 1000 times locally, and I was unable to get these tests to reproduce a timeout.
EWS
Comment 3
2023-11-01 10:02:16 PDT
Committed
270064@main
(97b134efc0bc): <
https://commits.webkit.org/270064@main
> Reviewed commits have been landed. Closing PR #19801 and removing active labels.
youenn fablet
Comment 4
2023-11-15 06:07:36 PST
Re-opening for pull request
https://github.com/WebKit/WebKit/pull/20537
EWS
Comment 5
2023-11-16 07:29:14 PST
Committed
270825@main
(6cd3ea9b08ba): <
https://commits.webkit.org/270825@main
> Reviewed commits have been landed. Closing PR #20537 and removing active labels.
EWS
Comment 6
2023-12-07 17:41:11 PST
Committed
271702@main
(a54075c47ad2): <
https://commits.webkit.org/271702@main
> Reviewed commits have been landed. Closing PR #21485 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug